--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "types": "lib/es/types/index.d.ts",
   "homepage": "http://Jen-ni.github.io/react-tag",
   "scripts": {
-    "build-storybook": "storybook build",
+    "build-storybook": "build-storybook",
     "build": "rollup -c",
-    "deploy-storybook": "gh-pages -d storybook-static",
     "lint:fix": "eslint src --quiet --fix",
     "lint": "eslint src",
     "postversion": "git push && git push --tags",
@@ -60,7 +59,6 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "0.6.15",
-    "gh-pages": "6.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "prettier": "3.0.3",
