--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
-          branch: main
+          branch: gh-pages
           folder: storybook-static
