--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noEmitOnError": true,
     "noImplicitAny": false,
     "outDir": "lib",
-    "rootDir": "./",
+    // "rootDir": "./",
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
